# comfyui-feishu-connector

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run.sh  实施计划.md  需求.md
scripts/: build_ca_bundle.sh  smoke_e2e.py
src/comfyui_feishu/: __init__.py  bot_service.py  card_builder.py  comfy_client.py  commands.py  config.py  feishu_bot.py  logging_config.py  main.py  task_store.py  translator.py  workflow_registry.py
tests/: test_bot_service_actions.py  test_card_builder.py  test_comfy_client.py  test_commands.py  test_feishu_bot.py  test_task_store.py  test_workflow_registry.py
workflows/: flux-1-basic.json  flux-2-hires.json  index.example.yaml  realistic-1-basic.json  realistic-2-hires-detailer.json  realistic-3-controlnet-union.json  realistic-4-ipadapter.json  realistic-5-reactor-swap.json
