[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-feishu"
version = "0.1.0"
description = "Feishu long-connection bot for running ComfyUI workflows."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "lark-oapi>=1.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "websockets>=12.0",
  "truststore>=0.10",
  "openai>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
comfyui-feishu = "comfyui_feishu.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
